--- a/packages/evershop/src/modules/cms/pages/frontStore/homepage/MainBanner.scss
+++ b/packages/evershop/src/modules/cms/pages/frontStore/homepage/MainBanner.scss
@@ -1,5 +1,5 @@
 .main-banner-home {
-  background-image: url('/assets/banner.png');
+  background-image: url('https://retrobeat-images.s3.ap-southeast-1.amazonaws.com/banner.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: left center;
